# cm_lbm

./: .gitignore  Cargo.toml  LICENSE  README.md  log.md  scratch.md  test_shader.wgsl
cm_lbm/: Cargo.toml
cm_lbm/examples/: compute_shader_diagram.rs  eq_comparison.rs  example_1.rs  example_2.rs  op_compare_figure.rs  op_stability.rs  param_search.rs  specular_figure.rs  sphere_few_frames.rs  wgpu_devices.rs
cm_lbm/src/: coord_util.rs  equil.rs  lattice.rs  lib.rs  map_buffer.rs
cm_lbm_generated/: Cargo.toml
cm_lbm_generated/src/: lib.rs
examples/: coord.rs  example_1.rs  lbm_2d.rs  specular_figure.rs  stream_figure.rs  testing.rs  testing_2.rs  vtk_testing.rs  wgpu_devices.rs
src/: coord_util.rs  dimensions.rs  equil.rs  lattice.rs  lbm_2d.rs  lib.rs  map_buffer.rs  run.rs  wgpu_util.rs
src/io/: mod.rs
src/kernel/: collision.rs  collision_gen.rs  densities.rs  dimensions.rs  gen.rs  macro_gen.rs  macros.rs  map_buffer.rs  mod.rs  pressure_gen.rs  setup_bind_group.rs  setup_pipeline.rs  stream.rs  stream_gen.rs  u_gen.rs
src/op_test/: cm_mrt.rs  eq_op.rs  hand_written.rs  mod.rs
src/shaders/: stream.wgsl  stream_test.wgsl
src/solver/: bc_uniform.rs  bounce_back.rs  cm_mrt.rs  cm_mrt_template.rs  collision.rs  dimensions_uniform.rs  dirichlet.rs  distributions.rs  faces.rs  init_op.rs  mod.rs  stream.rs  (+3 more)
sym_scripts/: cm_mrt.py  gen_cm_mrt.py  regex_test.py  sym_gen_util.py
sympy_codegen/: cm_mrt.py  codegen.py  gen_bgk.py  gen_cm_mrt.py  gen_eq.py  gen_eqhigh.py  gen_moments.py  gen_mrt.py  sym_gen_util.py
tests/: shader_tests.rs  stream_test.rs
(+31 files in other folders)
